@@ -138,6 +138,24 @@ static void SV_CreateBaseline (void)
 
 /*
 ================
+SV_GetLevelname
+
+Return the full levelname
+================
+*/
+const char *SV_GetLevelname (void)
+{
+	if (sv.edicts->v.message > 0 && sv.edicts->v.message <= host_string_count)
+		return &host_strings[host_string_index[(int)sv.edicts->v.message - 1]];
+
+/*	return "";*/
+/* Use netname on map if there is one, so they don't have to edit strings.txt */
+	return PR_GetString(sv.edicts->v.netname);
+}
+
+
+/*
+================
 SV_SaveSpawnparms
 
 Grabs the current state of the progs serverinfo flags
